--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@fluentui/react": "^8.114.0",
     "@fluentui/react-components": "^9.44.0",
+    "@react-oauth/google": "^0.12.1",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -13,8 +14,12 @@
     "@types/react": "^18.2.47",
     "@types/react-dom": "^18.2.18",
     "axios": "^1.6.5",
+    "buffer": "^6.0.3",
+    "dotenv": "^16.3.1",
+    "googleapis": "^130.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-oauth": "^0.0.1",
     "react-router-dom": "^6.21.1",
     "react-scripts": "5.0.1",
     "typescript": "^4.9.5",
