--- a/package.json
+++ b/package.json
@@ -16,12 +16,15 @@
     "axios": "^1.6.5",
     "buffer": "^6.0.3",
     "dotenv": "^16.3.1",
+    "firebase": "^10.7.1",
     "googleapis": "^130.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-google-login": "^5.2.2",
     "react-oauth": "^0.0.1",
     "react-router-dom": "^6.21.1",
     "react-scripts": "5.0.1",
+    "scheduler": "^0.23.0",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
   },
