--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@types/node": "^16.18.69",
     "@types/react": "^18.2.47",
     "@types/react-dom": "^18.2.18",
+    "@types/uuid": "^9.0.7",
     "axios": "^1.6.5",
     "buffer": "^6.0.3",
     "dotenv": "^16.3.1",
@@ -26,6 +27,7 @@
     "react-scripts": "5.0.1",
     "scheduler": "^0.23.0",
     "typescript": "^4.9.5",
+    "uuid": "^9.0.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
